[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
regex = "1.8.4"
reqwest = "0.11.18"
worker = "0.0.15"

[profile.release]
lto = true
strip = true
codegen-units = 1
